--- a/config.yaml
+++ b/config.yaml
@@ -11,3 +11,6 @@ ej2_outputs: ej2-Salida-deseada.txt
 
 # ej3
 ej3_pair_training: ej3-mapa-de-pixeles-digitos-decimales.txt
+
+# plotting
+plotting: True
